Fix curiosities home section title for mobile

--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.html
@@ -4,7 +4,7 @@
 >
   <h1
     fxFlexAlign="center"
-    class="section-name pb-44 curiosity-section-name"
+    class="section-name curiosity-section-name"
     [routerLink]="['/section/curiosidades']"
   >
     - CURIOSISDADES
