--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.scss
@@ -1,8 +1,15 @@
+@import '../../../../core/scss/ant.scss';
+
 .feature-section__positioned {
   position: relative;
 }
 
 .curiosity-section-name {
+  @include media-breakpoint('xs') {
+    font-size: 3em;
+    padding-bottom: 0;
+  }
+  padding-bottom: 44px;
   font-size: 7em;
   font-weight: 800;
   // line-height: 1;
