--- a/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.css';
+@import '../../../../core/scss/ant.scss';
 
 .section-name {
   text-align: center;
@@ -39,4 +40,9 @@
 
 .entertainment-article {
   max-width: 80%;
+
+  @include media-breakpoint('xs') {
+    max-width: 50%;
+    padding: 0;
+  }
 }
