--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -18,7 +18,12 @@
     />
   </div>
 
-  <div [ngClass]="{ 'main-article-summary-content__limited': isTopArticle }">
+  <div
+    [ngClass]="{
+      'main-article-summary-content__limited': isTopArticle,
+      'main-article-summary-content__positioned': isEntertainmentArticle
+    }"
+  >
     <div
       class="main-article-summary-content"
       fxLayout="column"
