--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
@@ -30,6 +30,7 @@
         [isTopArticle]="!isMobile()"
         [article]="article"
         [isMetadataVisible]="!isMobile()"
+        [isCardShadowMode]="!isMobile()"
       ></ant-article-summary>
     </div>
   </div>
