--- a/libs/shared/src/lib/components/article-summary/article-summary.component.html
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.html
@@ -22,7 +22,8 @@
   <div
     [ngClass]="{
       'main-article-summary-content__limited': isTopArticle,
-      'main-article-summary-content__positioned': isEntertainmentArticle
+      'main-article-summary-content__positioned': isEntertainmentArticle,
+      'experience-article-summary-content': isExperienceArticle
     }"
   >
     <div
