--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -167,7 +167,16 @@ $article-summary-bColor: #ffffff;
 }
 
 .experience-article {
+  display: flex;
+  flex-direction: column;
   height: 100%;
+
+  .experience-article-summary-content {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 .selected-curiosity {
