Set general styles for headers

--- a/apps/havana500-webclient/src/app/core/scss/core.scss
+++ b/apps/havana500-webclient/src/app/core/scss/core.scss
@@ -26,5 +26,6 @@
 @import 'partials/forms';
 @import 'partials/toolbar';
 @import 'partials/print';
+@import 'partials/hav500';
 
 @import '~@ng-select/ng-select/themes/material.theme.css';
