--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.scss
@@ -33,6 +33,10 @@
     width: -webkit-fill-available;
   }
 
+  .article-container {
+    width: 100%;
+  }
+
   // max-height: 54rem;
 }
 
@@ -48,28 +52,4 @@
   font-weight: 800;
 
   line-height: 1;
-}
-
-// asdasdasd
-
-ui-carousel {
-  display: block;
-  margin: 0 auto;
-}
-
-.carousel-4 {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-.carousel-inner {
-  padding: 1rem;
-}
-
-.article-container {
-  max-width: 100%;
-}
-
-.text-underline {
-  text-decoration: underline;
 }
