--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.scss
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-curiosities/outstanding-curiosities.component.scss
@@ -1,5 +1,11 @@
 @import '../../../../core/scss/ant.scss';
 
+.curiosity-section {
+  @include media-breakpoint-down('xs') {
+    margin-top: 6rem;
+  }
+}
+
 .feature-section__positioned {
   position: relative;
 }
