--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-gallery-medias/outstanding-gallery-medias.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-gallery-medias/outstanding-gallery-medias.component.html
@@ -1,10 +1,10 @@
 <div class="feature-section__padded gallery" fxLayout="column">
   <h1
     fxFlexAlign="center"
-    class="section-name pb-44 gallery-section-name"
+    class="section-name pb-44"
     [routerLink]="['/section/gallery']"
   >
-    - GALLERY
+    GALLERY
   </h1>
 
   <div class="gallery-grid">
