--- a/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/outstanding-general-articles/outstanding-general-articles.component.html
@@ -19,6 +19,7 @@
         [article]="article"
         [isMetadataVisible]="false"
         [isCardShadowMode]="false"
+        [isCreationDateVisible]="false"
       ></ant-article-summary>
     </div>
   </div>
