--- a/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/impact-portal/impact-portal.component.html
@@ -1,20 +1,41 @@
-<section fxLayout="column">
+<section
+  class="feature-section__padded impact-section"
+  fxLayout="row"
+  fxLayout.xs="column"
+>
+  <div class="impact-presentation">
+    <h1
+      fxFlexAlign="center"
+      class="section-name"
+      [routerLink]="'/section/impacto'"
+    >
+      IMPACTO
+    </h1>
+    <p class="impact-section-body">
+      Explicacion de lo que se puede encontrar en impacto, Lorem ipsum dolor sit
+      amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
+      tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad
+      minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+      nisl ut aliquip ex ea
+    </p>
+  </div>
 
-    <h1 fxFlexAlign="center" class="section-name" [routerLink]="'/section/impacto'">IMPACT</h1>
-
-    <div fxLayout="row wrap">
-        <a class="image-container col-3" ngClass.xs="col-6">
-            <h1 class="impact-section-title">SOCIAL</h1>
-        </a>
-        <a class="image-container col-3" ngClass.xs="col-6">
-            <h1 class="impact-section-title">CULTURAL</h1>
-        </a>
-        <a class="image-container col-3" ngClass.xs="col-6">
-            <h1 class="impact-section-title">ECONOMICO</h1>
-        </a>
-        <a class="image-container col-3" ngClass.xs="col-6">
-            <h1 class="impact-section-title">HISTORICO</h1>
-        </a>
+  <div class="impact-sections-portal">
+    <div fxLayout="row wrap" fxLayoutAlign="center center">
+      <a class="impact-sections social-section">
+        <h1 class="impact-section-title">SOCIAL</h1>
+      </a>
+      <a class="impact-sections political-section">
+        <h1 class="impact-section-title">POLITICO</h1>
+      </a>
     </div>
-
+    <div fxLayout="row wrap" fxLayoutAlign="center center">
+      <a class="impact-sections economic-section">
+        <h1 class="impact-section-title">ECONOMICO</h1>
+      </a>
+      <a class="impact-sections historic-section">
+        <h1 class="impact-section-title">HISTORICO</h1>
+      </a>
+    </div>
+  </div>
 </section>
