--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -103,13 +103,38 @@ $article-summary-bColor: #ffffff;
   align-self: center;
 }
 
+.article-creation-date {
+  position: absolute;
+  left: 0;
+  top: 5%;
+  background-color: white;
+  padding: 1rem;
+
+  .creation-date-day {
+    font-size: 2.875em;
+    line-height: 16px;
+    font-weight: 700;
+  }
+  .creation-date-month {
+    font-size: 1.44em;
+    line-height: 16px;
+    font-weight: 700;
+  }
+}
+
 .article-summary-title {
-  text-align: center;
+  // text-align: center;
   // text-align-last: center;
   font-weight: 700;
   padding-top: 1rem;
   font-size: 2.85em;
   text-transform: uppercase;
+  width: 100%;
+
+  @include media-breakpoint-down('sm') {
+    font-size: 2.25em;
+    text-align: center;
+  }
 }
 
 .article-summary-body {
@@ -117,6 +142,13 @@ $article-summary-bColor: #ffffff;
   font-size: 1.62em;
   line-height: 16px;
   font-weight: 300;
+}
+
+.article-author {
+  font-size: 1.62em;
+  line-height: 16px;
+  font-weight: 600;
+  width: 100%;
 }
 
 .article-image {
@@ -168,28 +200,14 @@ $article-summary-bColor: #ffffff;
 
 // CURIOSITY ARTICLE STYLES
 .curiosity-article {
-  min-height: 70vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  // min-height: 70vh;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-transition: all 0.5s cubic-bezier(0, 1.13, 0.88, 1.32);
-  transition: all 0.5s cubic-bezier(0, 1.13, 0.88, 1.32);
+  flex-direction: row;
 
   .article-summary-img-container {
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
-
-    .article-image {
-      height: -webkit-fit-content;
-      height: -moz-fit-content;
-      height: fit-content;
-      width: 100%;
-    }
   }
 }
 
