--- a/apps/havana500-webclient/src/app/core/scss/partials/_hav500.scss
+++ b/apps/havana500-webclient/src/app/core/scss/partials/_hav500.scss
@@ -13,6 +13,14 @@ $headers-color: #4c4c4c;
   }
 }
 
+.mobile-menu {
+  .mat-dialog-container {
+    background-color: #3c425257;
+    color: white;
+    overflow-x: hidden;
+  }
+}
+
 h1,
 h2,
 h3,
