--- a/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
@@ -1,67 +1,79 @@
 <div class="feature-section__padded entertainment-section" fxLayout="column">
-  <h1
-    fxFlexAlign="center"
-    class="section-name clickable"
-    [routerLink]="'/section/entretenimiento'"
-  >
-    ENTRETENIMIENTO
-  </h1>
+  <div fxFlexAlign="center" [routerLink]="'/section/entretenimiento'">
+    <h1 translate class="section-name clickable">ENTERTAINMENT</h1>
+  </div>
 
   <mat-tab-group>
-    <mat-tab label="DEPORTE">
-      <div class="row article-summary-container">
-        <ant-article-summary
-          [isTextVisible]="isMobile()"
-          [isMetadataVisible]="false"
-          [isCardShadowMode]="!isMobile()"
-          *ngFor="let article of (sportArticles | async)"
-          [article]="article"
-          class="col-6 w-auto entertainment-article"
-        ></ant-article-summary>
-      </div>
+    <mat-tab>
+      <ng-template matTabLabel> <h4 translate>SPORTS</h4> </ng-template>
+      <ng-template matTabContent>
+        <div class="row article-summary-container">
+          <ant-article-summary
+            [isTextVisible]="isMobile()"
+            [isMetadataVisible]="false"
+            [isCardShadowMode]="!isMobile()"
+            *ngFor="let article of (sportArticles | async)"
+            [article]="article"
+            class="col-6 w-auto entertainment-article"
+          ></ant-article-summary>
+        </div>
+      </ng-template>
     </mat-tab>
-    <mat-tab label="CINE">
-      <div class="row article-summary-container">
-        <ant-article-summary
-          [isTextVisible]="isMobile()"
-          [isMetadataVisible]="false"
-          [isCardShadowMode]="!isMobile()"
-          *ngFor="let article of (cinemaArticles | async)"
-          [article]="article"
-          class="col-6 w-auto entertainment-article"
-        ></ant-article-summary>
-      </div>
+    <mat-tab>
+      <ng-template matTabLabel><h4 translate>CINEMA</h4></ng-template>
+
+      <ng-template matTabContent>
+        <div class="row article-summary-container">
+          <ant-article-summary
+            [isTextVisible]="isMobile()"
+            [isMetadataVisible]="false"
+            [isCardShadowMode]="!isMobile()"
+            *ngFor="let article of (cinemaArticles | async)"
+            [article]="article"
+            class="col-6 w-auto entertainment-article"
+          ></ant-article-summary>
+        </div>
+      </ng-template>
     </mat-tab>
-    <mat-tab label="LITERATURA">
-      <div class="row article-summary-container">
-        <ant-article-summary
-          [isTextVisible]="isMobile()"
-          [isMetadataVisible]="false"
-          [isCardShadowMode]="!isMobile()"
-          *ngFor="let article of (literatureArticles | async)"
-          [article]="article"
-          class="col-6 w-auto entertainment-article"
-        ></ant-article-summary>
-      </div>
+    <mat-tab>
+      <ng-template matTabLabel><h4 translate>LITERATURE</h4></ng-template>
+
+      <ng-template matTabContent>
+        <div class="row article-summary-container">
+          <ant-article-summary
+            [isTextVisible]="isMobile()"
+            [isMetadataVisible]="false"
+            [isCardShadowMode]="!isMobile()"
+            *ngFor="let article of (literatureArticles | async)"
+            [article]="article"
+            class="col-6 w-auto entertainment-article"
+          ></ant-article-summary>
+        </div>
+      </ng-template>
     </mat-tab>
-    <mat-tab label="CULTURA">
-      <div class="row article-summary-container">
-        <ant-article-summary
-          [isTextVisible]="isMobile()"
-          [isMetadataVisible]="false"
-          [isCardShadowMode]="!isMobile()"
-          *ngFor="let article of (cultureArticles | async)"
-          [article]="article"
-          class="col-6 w-auto entertainment-article"
-        ></ant-article-summary>
-      </div>
+    <mat-tab>
+      <ng-template matTabLabel><h4 translate>CULTURE</h4></ng-template>
+
+      <ng-template matTabContent>
+        <div class="row article-summary-container">
+          <ant-article-summary
+            [isTextVisible]="isMobile()"
+            [isMetadataVisible]="false"
+            [isCardShadowMode]="!isMobile()"
+            *ngFor="let article of (cultureArticles | async)"
+            [article]="article"
+            class="col-6 w-auto entertainment-article"
+          ></ant-article-summary>
+        </div>
+      </ng-template>
     </mat-tab>
   </mat-tab-group>
 
   <a
+    translate
     class="see-more-section"
     [routerLink]="'/section/entretenimiento'"
     fxFlexAlign="center"
-    >See More</a
+    >SEE_MORE</a
   >
 </div>
